<resources>
    <string name="app_name">Gymledger</string>
    <string name="title">Gymledger</string>
    <string name="author">© Costa van Elsas</string>
    <string name="welcome_header">Welcome at Gymledger!</string>
    <string name="welcome_text"> In this application you can choose between exercises and add you own exercises.
        Also you can add the weight that you are doing while doing the exercise.
        This app will be for everyone who goes to the gym.
        This app creates the opportunity to get all your data in one app and create a clear view of which exercise and how many sets/reps and the amount of weight.
        The App will also save the date for which you can see a graph later. The graphs represent the gains that you have made.
        The app will generate recommendations on which exercise you will do and with the amount of weight/reps/sets.
</string>
    <string name="home">Home</string>
    <string name="exercise">Exercise</string>
    <string name="action_settings">Settings</string>
    <string name="gymbackground">gymbackground</string>
    <string name="description_exercise_image">exercise image</string>
    <string name="add_exercise">add exercise</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="image_url">Image URL</string>
    <string name="exercisee">Exercise:</string>
    <string name="desription">Description:</string>
    <string name="image_urls">Image (URL):</string>
    <string name="measurements">Measurements</string>
    <string name="weight">Weight:</string>
    <string name="fat_percentage">Fat percentage:</string>
    <string name="musclemass">Muscle mass:</string>
    <string name="weigtgoal">Weight goal:</string>
    <string name="edit_measurements">Edit measurements</string>
    <string name="notes">Notes:</string>
    <string name="fat_goal">Fat goal:</string>
    <string name="add">Add</string>
    <string name="kg">kg</string>
    <string name="percent">0–100%</string>
    <string name="add_measurements">Add measurement</string>
    <string name="date_added">Date added</string>
    <string name="measure_date">Measure date:</string>
    <string name="year">year</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="delete">delete all</string>
    <string name="placeholders">"Max: Reps: Sets: "</string>
</resources>
