<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exercise.add.AddExercise">

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#88C590"
        android:text="@string/add_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextImage"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextImage"
        android:layout_width="212dp"
        android:layout_height="46dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/image_url"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="109dp"
        android:text="@string/exercisee"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="114dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:text="@string/desription"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="99dp"
        android:text="@string/image_urls"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="211dp"
        android:layout_height="135dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

</androidx.constraintlayout.widget.ConstraintLayout>