<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.measurements.overview.MeasurementFragment">

    <EditText
        android:id="@+id/etFatGoal"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/percent"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNotes" />

    <Button
        android:id="@+id/btnSaveMeasurements"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#88C590"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFatGoal"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kg"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFatPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/percent"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <EditText
        android:id="@+id/editTextImageMeasurement"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/image_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFatPercentage"
        android:inputType="text" />

    <EditText
        android:id="@+id/etMuscleMass"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/percent"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextImageMeasurement" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:text="@string/weight"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFatPercentage"
        android:layout_width="141dp"
        android:layout_height="26dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="27dp"
        android:text="@string/fat_percentage"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextFatPercentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        android:text="@string/image_url"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextImageMeasurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFatPercentage" />

    <TextView
        android:id="@+id/tvMusclemass"
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="27dp"
        android:text="@string/musclemass"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etMuscleMass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvWeightGoal"
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="26dp"
        android:text="@string/weigtgoal"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etWeightGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMusclemass" />

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="26dp"
        android:text="@string/notes"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeightGoal" />

    <TextView
        android:id="@+id/tvFatGoal"
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="26dp"
        android:text="@string/fat_goal"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etFatGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotes" />

    <EditText
        android:id="@+id/etWeightGoal"
        android:layout_width="212dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="27dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kg"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMuscleMass" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="214dp"
        android:layout_height="91dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWeightGoal"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>