<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gymledger.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">
    </fragment>
    <fragment
        android:id="@+id/nav_measurements"
        android:name="com.example.gymledger.ui.measurements.overview.MeasurementFragment"
        android:label="@string/measurements"
        tools:layout="@layout/fragment_measurement">
    </fragment>
    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.example.gymledger.ui.exercise.overview.ExerciseFragment"
        android:label="@string/exercise"
        tools:layout="@layout/exercise_fragment">
        <action
            android:id="@+id/action_ExerciseFragment_to_ExerciseDetailFragment"
            app:destination="@id/ExerciseDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/ExerciseDetailFragment"
        android:name="com.example.gymledger.ui.exercise.detail.ExerciseDetailFragment"
        android:label="{naam}"
        tools:layout="@layout/fragment_exercise_detail">
        <argument
            android:name="exercise"
            app:argType="com.example.gymledger.model.Exercise" />
        <argument
            android:name="naam"
            app:argType="string" />
    </fragment>


</navigation>